# investing-mcp

./: README.md  pyproject.toml
src/: client.py  server.py
src/tools/: __init__.py  polygon.py
